# Constrained-Filter-Feature-Selection

./: .gitignore  Combi_Evaluation_Demo.ipynb  Evaluation_Demo.ipynb  MS_Constraint_Demo.ipynb  Materials_Science_Demo.ipynb  Pipfile  Predict_ReactionDensity.ipynb  Predict_Reaction_Density_sampled_voxel.ipynb  README.md  Solver_Enumeration_Benchmark.ipynb  Z3_Playgound.ipynb  combi_expressions.py  combi_solving.py  data_utility.py  expressions.py  feature_qualities.py  generation.py  ms_compare_reaction_types.py  ms_compute_feature_importance.py  ms_constraints.py  ms_datasets.py  ms_pipeline.py  ms_pipeline_evaluation.py  ms_pipeline_evaluation_snippets.py  ms_prepare_datasets.py  paper_evaluation.py  pipeline.py  pipeline_evaluation.py  pipeline_evaluation_snippets.py  pipeline_utility.py  prediction_utility.py  prepare_openml_datasets.py  requirements.txt  solving.py
cffs/core/: combi_expressions.py  combi_solving.py  expressions.py  solving.py
cffs/materials_science/: ms_colloquium_evaluation.py  ms_compare_reaction_types.py  ms_compute_feature_importance.py  ms_constraints.py  ms_data_utility.py  ms_evaluation.py  ms_paper_evaluation.py  ms_pipeline.py  ms_pipeline_evaluation.py  ms_prepare_datasets.py  prepare_ms_dataset.py  prepare_ms_datasets.py
cffs/synthetic_constraints/: paper_evaluation.py  pipeline.py  prepare_demo_dataset.py  (+7 more)
choco_demo/: .project  pom.xml
java_solvers/: pom.xml
src/cffs_package/: README.md  pyproject.toml
src/cffs_package/cffs/: combi_expressions.py  combi_solving.py  expressions.py  feature_qualities.py  solving.py
(+23 files in other folders)
